--- a/Project2Frontend/WebContent/index.html
+++ b/Project2Frontend/WebContent/index.html
@@ -63,7 +63,7 @@
 								class="rw-number-notification" ng-if="notificationCount>0">{{notificationCount}}</span></span></a>
 						<ul class="dropdown-menu">
 							<span class="dropdown-content">
-							<li>Notifications</li>
+								<li>Notifications</li>
 								<li ng-repeat="notification in notifications"><a
 									href="#/getnotification/{{notification.id}}">The Blog
 										titled <b> {{notification.blogTitle}}</b> approval status is
@@ -72,6 +72,18 @@
 									<hr></li>
 							</span>
 						</ul></li>
+
+					<li class="dropdown" ng-show="user.email != undefined"><a
+						href="#" class="dropdown-toggle" data-toggle="dropdown">Friend<span
+							class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#/suggestedusers">Suggested Users</a></li>
+							<li><a href="#/pendingrequests">Pending Requests</a></li>
+							<li><a href="#/listoffriends">Friends</a></li>
+
+
+						</ul></li>
+
 
 					<li ng-show="user.email!=undefined"><a href="">Welcome
 							{{user.firstname}}&nbsp;{{user.lastname}}</a></li>
@@ -98,7 +110,15 @@
 <script type="text/javascript" src="services/jobservice.js"></script>
 <script type="text/javascript" src="controllers/blogcontroller.js"></script>
 <script type="text/javascript" src="services/blogservice.js"></script>
-<script type="text/javascript" src="controllers/blogindetailcontroller.js"></script>
+<script type="text/javascript"
+	src="controllers/blogindetailcontroller.js"></script>
 <script type="text/javascript" src="services/notificationservice.js"></script>
-<script type="text/javascript" src="controllers/notificationcontroller.js"></script>
+<script type="text/javascript"
+	src="controllers/notificationcontroller.js"></script>
+
+
+<script type="text/javascript" src="controllers/friendcontroller.js"></script>
+<script type="text/javascript" src="services/friendservice.js"></script>
+
+
 </html>
