--- a/Project2Frontend/WebContent/index.html
+++ b/Project2Frontend/WebContent/index.html
@@ -6,26 +6,25 @@
 <title>Insert title here</title>
 <script
 	src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-
 <link
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	rel="stylesheet">
-
-
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
 	type="text/javascript"></script>
 <link
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
 	rel="stylesheet" />
-<link rel="stylesheet" href="resources/css/notification.css">
 
+
+<link rel="stylesheet" href="resources/css/notification.css">
+<link rel="stylesheet" href="resources/css/custom.css">
+<link rel="stylesheet" href="resources/css/chat.css">
 </head>
 <body ng-app="app">
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default" style="background-color: #fbc02d;">
 
-		<div class="container-fluid">
+		<div class="container-fluid" style="background-color: #fbc02d;">
 			<button type="button" class="navbar-toggle collapsed"
 				data-toggle="collapse" data-target="#collapse-example"
 				aria-expanded="false">
@@ -34,7 +33,8 @@
 					class="icon-bar"></span>
 			</button>
 
-			<div class="collapse navbar-collapse" id="collapse-example">
+			<div class="collapse navbar-collapse" id="collapse-example"
+				style="background-color: #fbc02d;">
 				<ul class="nav navbar-nav ">
 					<li ng-show="user.email==undefined"><a href="#/registration"><span
 							class="glyphicon glyphicon-registration"></span>Sign Up</a></li>
@@ -44,11 +44,11 @@
 					<li ng-show="user.email!=undefined"><a href="#/getalljobs">Get
 							All Jobs</a></li>
 
-					<li class="dropdown" ng-show="user.email!=undefined"><a
-						href="#" class="dropdown-toggle" data-toggle="dropdown">Blog<span
-							class="caret"></span></a>
+					<li class="dropdown" ng-show="user.email!=undefined "><a
+						href="#" class="dropdown-toggle" data-toggle="dropdown"
+						style="background-color: #fbc02d;">Blog<span class="caret"></span></a>
 
-						<ul class="dropdown-menu">
+						<ul class="dropdown-menu" style="background-color: #fbc02d;">
 							<li><a href="#/addblog">Add Blog</a></li>
 							<!-- if routeparams value is 1, only then it will execute the statement BlogService.getBlogsWaitingForApproval() -->
 							<li ng-show="user.role=='ADMIN'"><a
@@ -58,31 +58,42 @@
 						</ul></li>
 
 					<li class="dropdown"><a href="#" class="dropdown-toggle"
-						data-toggle="dropdown" ng-show="user.email!=undefined"> <span
-							class="glyphicon glyphicon-globe"> <span
+						data-toggle="dropdown" ng-show="user.email!=undefined"
+						style="background-color: #fbc02d;"> <span
+							class="glyphicon glyphicon-globe"
+							style="background-color: #fbc02d;"> <span
 								class="rw-number-notification" ng-if="notificationCount>0">{{notificationCount}}</span></span></a>
-						<ul class="dropdown-menu">
+						<ul class="dropdown-menu" style="background-color: #fbc02d;">
 							<span class="dropdown-content">
-								<li>Notifications</li>
+
 								<li ng-repeat="notification in notifications"><a
 									href="#/getnotification/{{notification.id}}">The Blog
 										titled <b> {{notification.blogTitle}}</b> approval status is
 										updated.. Click here to view the status
 								</a>
 									<hr></li>
+								<li>Notifications</li>
 							</span>
 						</ul></li>
+					<!-- 
+						<li ng-show="user.email!=undefined"><a href="#/getallnotifications"
+						>Get All Notifications</a></li> -->
 
-					<li class="dropdown" ng-show="user.email != undefined"><a
-						href="#" class="dropdown-toggle" data-toggle="dropdown">Friend<span
-							class="caret"></span></a>
-						<ul class="dropdown-menu">
+					<li class="dropdown" ng-show="user.email != undefined"
+						style="background-color: #fbc02d;"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown"
+						style="background-color: #fbc02d;">Friend<span class="caret"></span></a>
+						<ul class="dropdown-menu" style="background-color: #fbc02d;">
 							<li><a href="#/suggestedusers">Suggested Users</a></li>
 							<li><a href="#/pendingrequests">Pending Requests</a></li>
 							<li><a href="#/listoffriends">Friends</a></li>
 
 
 						</ul></li>
+
+					<li ng-show="user.firstname"><a href="#/chat">Chat
+							Room </a></li>
+
 
 
 					<li ng-show="user.email!=undefined"><a href="">Welcome
@@ -103,6 +114,7 @@
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
 <script type="text/javascript"
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.js"></script>
+
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="controllers/usercontroller.js"></script>
 <script type="text/javascript" src="services/userservice.js"></script>
@@ -115,10 +127,13 @@
 <script type="text/javascript" src="services/notificationservice.js"></script>
 <script type="text/javascript"
 	src="controllers/notificationcontroller.js"></script>
-
-
 <script type="text/javascript" src="controllers/friendcontroller.js"></script>
 <script type="text/javascript" src="services/friendservice.js"></script>
+<script type="text/javascript" src="services/chatservice.js"></script>
+<script type="text/javascript" src="controllers/chatcontroller.js"></script>
 
+
+<script type="text/javascript" src="js/sockjs/sockjs.js"></script>
+ <script type="text/javascript" src="js/stomp/dist/stomp.js"></script>
 
 </html>
