--- a/Project2Frontend/WebContent/index.html
+++ b/Project2Frontend/WebContent/index.html
@@ -1,10 +1,11 @@
 
 <!DOCTYPE html>
+
 <html>
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
-<script
+<!-- <script
 	src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <link
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -14,99 +15,160 @@
 	type="text/javascript"></script>
 <link
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
-	rel="stylesheet" />
+	rel="stylesheet" /> 
+ -->
 
+<!-- Latest compiled and minified CSS 
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+jQuery library
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+Popper JS
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
+Latest compiled JavaScript
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+ -->
+
+<link rel="stylesheet"
+	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script
+	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" href="resources/css/notification.css">
 <link rel="stylesheet" href="resources/css/custom.css">
-<link rel="stylesheet" href="resources/css/chat.css">
+<!-- <link rel="stylesheet" href="resources/css/chat.css"> -->
+
+<style>
+</style>
+
+
 </head>
-<body ng-app="app">
-	<nav class="navbar navbar-default" style="background-color: #fbc02d;">
+<body ng-app="app" style="text-align: center;">
+	<nav class="navbar-default" id="main">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target="#myNavbar">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class=" navbar-brand active " href=""style="color: white"
+					onclick="openNav()">Collaboration Portal</a>
 
-		<div class="container-fluid" style="background-color: #fbc02d;">
-			<button type="button" class="navbar-toggle collapsed"
-				data-toggle="collapse" data-target="#collapse-example"
-				aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span> <span
-					class="icon-bar"></span> <span class="icon-bar"></span> <span
-					class="icon-bar"></span>
-			</button>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar"
+				style="color: white">
+				<ul class="nav navbar-nav" style="color: white">
 
-			<div class="collapse navbar-collapse" id="collapse-example"
-				style="background-color: #fbc02d;">
-				<ul class="nav navbar-nav ">
-					<li ng-show="user.email==undefined"><a href="#/registration"><span
-							class="glyphicon glyphicon-registration"></span>Sign Up</a></li>
-					<li ng-show="user.email==undefined"><a href="#/login">Login</a></li>
-					<li ng-show="user.role=='ADMIN'"><a href="#/addjob">Add
-							Job</a></li>
-					<li ng-show="user.email!=undefined"><a href="#/getalljobs">Get
-							All Jobs</a></li>
-
-					<li class="dropdown" ng-show="user.email!=undefined "><a
-						href="#" class="dropdown-toggle" data-toggle="dropdown"
-						style="background-color: #fbc02d;">Blog<span class="caret"></span></a>
-
-						<ul class="dropdown-menu" style="background-color: #fbc02d;">
-							<li><a href="#/addblog">Add Blog</a></li>
-							<!-- if routeparams value is 1, only then it will execute the statement BlogService.getBlogsWaitingForApproval() -->
-							<li ng-show="user.role=='ADMIN'"><a
-								href="#/blogsWaitingForApproval/1">Blogs Waiting For
-									approval</a></li>
-							<li><a href="#/blogsApproved/2">Blogs Approved</a></li>
-						</ul></li>
-
-					<li class="dropdown"><a href="#" class="dropdown-toggle"
-						data-toggle="dropdown" ng-show="user.email!=undefined"
-						style="background-color: #fbc02d;"> <span
-							class="glyphicon glyphicon-globe"
-							style="background-color: #fbc02d;"> <span
-								class="rw-number-notification" ng-if="notificationCount>0">{{notificationCount}}</span></span></a>
-						<ul class="dropdown-menu" style="background-color: #fbc02d;">
-							<span class="dropdown-content">
-
-								<li ng-repeat="notification in notifications"><a
-									href="#/getnotification/{{notification.id}}">The Blog
-										titled <b> {{notification.blogTitle}}</b> approval status is
-										updated.. Click here to view the status
-								</a>
-									<hr></li>
-								<li>Notifications</li>
-							</span>
-						</ul></li>
-					<!-- 
-						<li ng-show="user.email!=undefined"><a href="#/getallnotifications"
-						>Get All Notifications</a></li> -->
-
-					<li class="dropdown" ng-show="user.email != undefined"
-						style="background-color: #fbc02d;"><a href="#"
-						class="dropdown-toggle" data-toggle="dropdown"
-						style="background-color: #fbc02d;">Friend<span class="caret"></span></a>
-						<ul class="dropdown-menu" style="background-color: #fbc02d;">
-							<li><a href="#/suggestedusers">Suggested Users</a></li>
-							<li><a href="#/pendingrequests">Pending Requests</a></li>
-							<li><a href="#/listoffriends">Friends</a></li>
-
-
-						</ul></li>
-
-					<li ng-show="user.firstname"><a href="#/chat">Chat
-							Room </a></li>
-
-
-
-					<li ng-show="user.email!=undefined"><a href="">Welcome
+					
+				</ul>
+				<ul class="nav navbar-nav navbar-right" style="color: white">
+					<li ng-show="user.email!=undefined"><a style="color: white"
+						class="nav-link" href="">Welcome
 							{{user.firstname}}&nbsp;{{user.lastname}}</a></li>
-					<li ng-show="user.email!=undefined"><a href=""
-						ng-click="logout()">logout</a></li>
+					<li><a style="color: white"
+						class="glyphicon glyphicon-question-sign" href="#"></a></li>
+					<li><a style="color: white"
+						class="glyphicon glyphicon-envelope" href="#"></a></li>
+					<li ng-show="user.email==undefined"><a style="color: white"
+						href="#/registration"><span class="glyphicon glyphicon-user"></span></a></li>
+					<!-- <li ng-show="user.email==undefined"><a style="color: white"
+						href="#/login"><span class="glyphicon glyphicon-log-in"></span></a></li> -->
+<li ng-show="user.email!=undefined"><a style="color: white"
+						class="nav-link" class="nav-link " href="" ng-click="logout()">logout</a></li>
+
 				</ul>
 			</div>
 		</div>
 	</nav>
+
+	<div ng-show="user.email!=undefined" id="mySidenav" class="sidenav"
+		style="color: white">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+			style="color: white">&times;</a>
+		<ul>
+			<li class="dropdown"></li><br />
+			<li ng-show="user.role=='ADMIN'"><a class="nav-link"
+				href="#/addjob"onclick="closeNav()">Add Job</a></li>
+			<li ng-show="user.email!=undefined"><a class="nav-link"
+				href="#/getalljobs"onclick="closeNav()">Get All Jobs</a></li>
+
+			<li class="dropdown" ng-show="user.email!=undefined "><a
+				class="nav-link" href="#" class="dropdown-toggle"
+				data-toggle="dropdown">Blog<span class="caret"></span></a>
+
+				<ul class="dropdown-menu">
+					<li><a class="nav-link" href="#/addblog"onclick="closeNav()">Add Blog</a></li>
+					<!-- if routeparams value is 1, only then it will execute the statement BlogService.getBlogsWaitingForApproval() -->
+					<li ng-show="user.role=='ADMIN'"><a class="nav-link"
+						href="#/blogsWaitingForApproval/1"onclick="closeNav()">Blogs Waiting For approval</a></li>
+					<li><a class="nav-link" href="#/blogsApproved/2">Blogs
+							Approved</a></li>
+				</ul></li>
+
+			<li class="dropdown"><a class="nav-link" href="#"
+				class="dropdown-toggle" data-toggle="dropdown"
+				ng-show="user.email!=undefined"> <span
+					class="glyphicon glyphicon-globe"> <span
+						class="rw-number-notification" ng-if="notificationCount>0">{{notificationCount}}</span>
+				</span></a>
+				<ul class="dropdown-menu">
+					<span class="dropdown-content">
+
+						<li ng-repeat="notification in notifications"><a
+							class="nav-link" href="#/getnotification/{{notification.id}}">The
+								Blog titled <b> {{notification.blogTitle}}</b> approval status
+								is updated.. Click here to view the status
+						</a>
+							<hr></li>
+						<li>Notifications</li>
+					</span>
+				</ul></li>
+			<!-- 
+						<li ng-show="user.email!=undefined"><a href="#/getallnotifications"
+						>Get All Notifications</a></li> -->
+
+			<li class="dropdown" ng-show="user.email != undefined"><a
+				class="nav-link" href="#" class="dropdown-toggle"
+				data-toggle="dropdown">Friend<span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					<li><a class="nav-link" href="#/suggestedusers"onclick="closeNav()">Suggested
+							Users</a></li>
+					<li><a class="nav-link" href="#/pendingrequests"onclick="closeNav()">Pending
+							Requests</a></li>
+					<li><a class="nav-link" href="#/listoffriends"onclick="closeNav()">Friends</a></li>
+
+
+				</ul></li>
+
+			<li ng-show="user.firstname"><a class="nav-link" href="#/chat"onclick="closeNav()">Chat
+					Room </a></li>
+		</ul>
+	</div>
+
+	<!-- Use any element to open the sidenav 
+			<span onclick="openNav()">open</span>-->
+
+	<!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+	<div id="main"></div>
+
+
+	</div>
+
+
 	<div class="container">
 		<div ng-view></div>
 	</div>
+
+
 </body>
 <script type="text/javascript"
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
@@ -114,7 +176,7 @@
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
 <script type="text/javascript"
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.js"></script>
-
+<script type="text/javascript" src="resources/js/custom.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="controllers/usercontroller.js"></script>
 <script type="text/javascript" src="services/userservice.js"></script>
@@ -134,6 +196,6 @@
 
 
 <script type="text/javascript" src="js/sockjs/sockjs.js"></script>
- <script type="text/javascript" src="js/stomp/dist/stomp.js"></script>
+<script type="text/javascript" src="js/stomp/dist/stomp.js"></script>
 
 </html>
